syntax = "proto3";
option go_package="proto.payment.type";

service PaymentTypeService {
  rpc List(ListPaymentTypeRequest) returns (ListPaymentTypeResponse);
  rpc Create(CreatePaymentTypeRequest) returns (PaymentTypeProfileResponse);
  rpc Get(SinglePaymentTypeRequest) returns (PaymentTypeProfileResponse);
  rpc Update(UpdatePaymentTypeRequest) returns (PaymentTypeSuccessResponse);
  rpc Delete(SinglePaymentTypeRequest) returns (PaymentTypeSuccessResponse);
}

message ListPaymentTypeRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ListPaymentTypeResponse {
  repeated PaymentTypeProfileResponse payment_types = 1;
}

message CreatePaymentTypeRequest{
  string code = 1;
  string name = 2;
  string activation_date = 3;
  string deactivation_date = 4;
  int64 old_code = 5;
  string old_name = 6;
  string name_uz = 7;
  string flex_fin_id = 8;
}

message SinglePaymentTypeRequest{
  oneof payment_type_identifier {
    string id = 1;
    string code = 2;
  }
}

message PaymentTypeProfileResponse{
  string id = 1;
  string code = 2;
  string name = 3;
  string activation_date = 4;
  string deactivation_date = 5;
  int64 old_code = 6;
  string old_name = 7;
  string name_uz = 8;
  string flex_fin_id = 9;
  string deleted_at = 10;
}

message PaymentTypeSuccessResponse{
  string response = 1;
}

message UpdatePaymentTypeRequest{
  string id = 1;
  string code = 2;
  string name = 3;
  string activation_date = 4;
  string deactivation_date = 5;
  int64 old_code = 6;
  string old_name = 7;
  string name_uz = 8;
  string flex_fin_id = 9;
}